Update exercise/workout endpoints
